--- a/css/caps.css
+++ b/css/caps.css
@@ -1,21 +1,26 @@
-/*  CAPS MAPAS  */
-.flexbox{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+/*  CAPS MAPAS    */
+.box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    gap: 15px;
 }
-.flex-item{
 
-    min-width: 384px;
-    padding: 15px;
+.box {
+    border: 1px solid rgba(54, 53, 53, 0.623);
+    border-radius: 5px;
+    ;
+    box-shadow: 0 3px 5px #4e82be96;
     text-align: center;
-}
-iframe {
-    border: 1px solid black;
-    width: 100%;
-
+    padding: 30px 20px;
 }
 
+.box:hover {
+    opacity: 0.75;
+    box-shadow: none;
+}
+.map{
+    margin-top: 20px;
+}
 
 /*  BOOTSTRAP*/
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap");
