--- a/css/general.css
+++ b/css/general.css
@@ -13,6 +13,11 @@ body {
 	justify-content: space-between;
 	font-family: "Roboto", sans-serif;
 }
+h1 {
+	font-weight: bold;
+	padding: 15px 0;
+	text-align: center;
+}
 .encabezado {
 	border-bottom: 1px solid rgba(0, 0, 0, 0.349);
 }
@@ -117,15 +122,7 @@ body {
 }
 
 @media screen and (min-width: 1024px) {
-	/* .encabezado, */
 	.contenedor {
-		padding: 0 25px;
-	}
-}
-
-@media screen and (min-width: 1536px) {
-	/* .encabezado, */
-	.contenedor {
-		padding: 0 50px;
+		padding: 0 20px;
 	}
 }
