--- a/css/turnero.css
+++ b/css/turnero.css
@@ -35,11 +35,6 @@ label {
 	background-color: rgb(186, 205, 206);
 	cursor: pointer;
 	transition: all 0.7s ease-out;
-	transform: scale(1.04);
-	-webkit-transform: scale(1.04);
-	-moz-transform: scale(1.04);
-	-ms-transform: scale(1.04);
-	-o-transform: scale(1.04);
 	-webkit-transition: all 0.7s ease-out;
 	-moz-transition: all 0.7s ease-out;
 	-ms-transition: all 0.7s ease-out;
@@ -79,14 +74,89 @@ label {
 	justify-content: space-between;
 }
 
-.msj_turno {
+.fecha_calendario .msj_turno {
 	order: 2;
 	font-weight: 700;
 	text-align: center;
 }
 
+.sinAtencion .msj_turno {
+	display: none;
+}
+
 .calendario {
 	display: none;
+}
+
+/* Formulario modal solicitud turno */
+.form_turno {
+	padding: 20px;
+}
+
+.campos_form {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+.caja_inputs {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+}
+.checkbox_turno {
+	display: flex;
+	flex-direction: row;
+	padding: 5px 0;
+	align-items: center;
+	justify-content: center;
+}
+.radio_turno {
+	text-align: center;
+	padding: 5px 0;
+}
+.bloque_radio {
+	display: flex;
+	flex-direction: row;
+	gap: 20px;
+	justify-content: center;
+}
+.radio_turno > label {
+	text-align: center;
+}
+.bloque_file {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.select_turno {
+	grid-column: span 2;
+}
+.file_turno {
+	display: none;
+}
+.bloque_btn {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 20px;
+	margin-top: 10px;
+}
+.btn_enviar,
+.btn_volver {
+	padding: 3px 0;
+	color: white;
+	font-weight: bold;
+	border-radius: 15px;
+	-webkit-border-radius: 15px;
+	-moz-border-radius: 15px;
+	-ms-border-radius: 15px;
+	-o-border-radius: 15px;
+}
+.btn_enviar {
+	background-color: green;
+}
+.btn_volver {
+	background-color: red;
 }
 
 @media screen and (min-width: 640px) {
@@ -142,7 +212,6 @@ label {
 		font-size: 0.85rem;
 	}
 	.dia_num {
-		/* padding: 3px; */
 		font-size: 1.2rem;
 	}
 
@@ -153,6 +222,25 @@ label {
 		width: initial;
 		align-items: center;
 	}
+
+	/* Formulario solicitud turno */
+	.campos_form {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		column-gap: 20px;
+		row-gap: 25px;
+	}
+	.radio_turno {
+		margin-bottom: 5px;
+	}
+	.bloque_btn {
+		grid-column: span 2;
+	}
+	.btn_enviar,
+	.btn_volver {
+		width: 95%;
+		margin: auto;
+	}
 }
 
 @media screen and (min-width: 992px) {
@@ -161,11 +249,18 @@ label {
 	}
 	.fecha_calendario,
 	.sinAtencion {
-		height: 65px;
+		height: 90px;
+	}
+	.fecha_calendario {
+		justify-content: center;
 	}
 
 	.fechas,
 	.dias_semana {
 		grid-gap: 5px;
+	}
+	.btn_enviar,
+	.btn_volver {
+		width: 65%;
 	}
 }
