--- a/css/caps.css
+++ b/css/caps.css
@@ -1,27 +1,3 @@
-/*  CAPS MAPAS    */
-.box-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-    gap: 15px;
-}
-
-.box {
-    border: 1px solid rgba(54, 53, 53, 0.623);
-    border-radius: 5px;
-    ;
-    box-shadow: 0 3px 5px #4e82be96;
-    text-align: center;
-    padding: 30px 20px;
-}
-
-.box:hover {
-    opacity: 0.75;
-    box-shadow: none;
-}
-.map{
-    margin-top: 20px;
-}
-
 /*  BOOTSTRAP*/
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap");
 
@@ -30,6 +6,7 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+
 body {
 	min-height: 100vh;
 	background-color: #f5f2ebfa;
@@ -38,20 +15,25 @@ body {
 	justify-content: space-between;
 	font-family: "Roboto", sans-serif;
 }
+
 .encabezado {
 	border-bottom: 1px solid rgba(0, 0, 0, 0.349);
 }
+
 .navbar {
 	padding-bottom: 0;
 }
+
 .activo {
 	background-color: rgba(216, 216, 216, 0.685);
 }
+
 .enlaces {
 	font-weight: bold;
 	font-size: 1rem;
 	color: black;
 }
+
 .navbar-collapse {
 	margin: 10px 0;
 }
@@ -68,25 +50,17 @@ body {
 	flex-grow: 1;
 	padding-bottom: 10px;
 }
+
 .contenedor .estructura_contenido {
 	width: 100%;
 }
-/* .contenedor_gral {
-	background-color: white;
-	margin: 10px 0;
-	padding: 10px 0;
-	border-radius: 15px;
-	-webkit-border-radius: 15px;
-	-moz-border-radius: 15px;
-	-ms-border-radius: 15px;
-	-o-border-radius: 15px;
-} */
 
 .pie_pagina {
 	background-color: #002b5b;
 	display: flex;
 	flex-direction: column;
 }
+
 .pie_pagina p {
 	color: white;
 	font-size: 0.75rem;
@@ -95,12 +69,43 @@ body {
 	margin: 0;
 }
 
+/*  CAPS MAPAS    */
+.box-container {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+	gap: 15px;
+}
+
+.box {
+	border: 1px solid rgba(54, 53, 53, 0.623);
+	border-radius: 5px;
+	;
+	box-shadow: 0 3px 5px #4e82be96;
+	text-align: center;
+	padding: 30px 20px;
+}
+
+h1 {
+	margin: 10px 10px;
+	text-align: center;
+}
+
+.box:hover {
+	opacity: 0.75;
+	box-shadow: none;
+}
+
+.map {
+	margin: 30px 10px;
+}
+
 /* MQ */
 @media screen and (min-width: 575px) {
 	.encabezado {
 		padding: 0;
 		flex-direction: row;
 	}
+
 	.encabezado_fijo {
 		justify-content: end;
 		padding: 0 10px;
@@ -110,6 +115,7 @@ body {
 		margin: 10px;
 		padding: 15px;
 	}
+
 	.pie_pagina p {
 		font-size: 1rem;
 	}
@@ -119,12 +125,14 @@ body {
 	.navbar {
 		padding-top: 0;
 	}
+
 	.enlaces {
 		margin: 0 15px;
 	}
 }
 
 @media screen and (min-width: 1024px) {
+
 	/* .encabezado, */
 	.contenedor {
 		padding: 0 25px;
@@ -140,14 +148,17 @@ body {
 }
 
 @media screen and (min-width: 1536px) {
+
 	/* .encabezado, */
 	.contenedor {
 		padding: 0 50px;
 	}
+
 	.tit_principal {
 		padding: 25px 0;
 		font-size: 3.3rem;
 	}
+
 	.contenedor_gral {
 		padding: 50px;
 		padding-top: 0px;
