--- a/css/personalMedico.css
+++ b/css/personalMedico.css
@@ -1,9 +1,11 @@
 
+
 /*  PERSONAL MEDICO */
 .box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(270px, 1fr));
     gap: 15px;
+	margin: 30px 10px;
 }
 .box{
     box-shadow: 0 3px 5px;
@@ -20,6 +22,7 @@ h3{
     color:#444;
     font-size: 22px;
     padding:10px 0;
+	margin-left: 10px;
 }
 
 /*  BOOTSTRAP*/
@@ -87,6 +90,7 @@ body {
 
 /* MQ */
 @media screen and (min-width: 575px) {
+
 	.encabezado {
 		padding: 0;
 		flex-direction: row;
